--- a/public/styles.css
+++ b/public/styles.css
@@ -52,7 +52,7 @@ input, select{
   border-radius: 4px;
 }
 .field{
-  display: inline-block;
+  /* display: inline-block; */
   margin: 0 10px;
 }
 button{
@@ -62,6 +62,7 @@ button{
   padding: 6px;
   min-width: 80px;
   border-radius: 4px;
+  margin-top: auto;
 }
 footer a{
   text-align: center;
@@ -69,4 +70,9 @@ footer a{
   color: #999;
   margin-top: 40px;
   font-size: 0.7em;
+}
+.new-item-form{
+  display: flex;
+  align-items: center;
+  justify-content: center;
 }
